[package]
name = "ic_sft_canister"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-sft-types = { path = "../../crates/ic-sft-types", version = "0.2" }
candid = { workspace = true }
ic-ledger-types = { workspace = true }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ciborium = { workspace = true }
ic-stable-structures = { workspace = true }
ic-certification = "2.5"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
ic-cdk = "0.13"
ic-cdk-timers = "0.7"
sha3 = "0.10"
once_cell = "1.19"
base64 = "0.22"
scopeguard = "1.2"
